Sun Oct 24 23:54:10 PDT 1999 Jeff Law  (law@cygnus.com)

	* gcc-2.95.2 Released.

Mon Oct 25 00:43:05 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (note_set_pseudo_multiple_uses_retval): New variable.
	(note_set_pseudo_multiple_uses): New function.
	(check_dbra_loop): Use not_set_pseudo_multiple_uses to determine
	if a pseudo set in the loop exit is used elsewhere.

Wed Oct 20 10:46:41 1999  Richard Earnshaw (rearnsha@arm.com)

	* jump.c (jump_optimize_1): More accurately detect casesi insns.

Wed Oct 20 22:57:58 1999  Jeffrey A Law  (law@cygnus.com)

	* toplev.c (main): Do not turn on strict aliasing by default.
	* invoke.texi: Corresponding changes.

	* sparc.md (movsf_const_intreg): If splitting, length must be > 1.
	(movdf_const_intreg_sp64): Similarly.

	* local-alloc.c (update_equiv_regs): Check the correct insn
	for pre-existing REG_EQUIV notes.

Tue Oct 19 02:03:00 1999  Jeffrey A Law  (law@cygnus.com)

	Revert this change.  Gavin's patch to operand_equal_p is a better fix.
	* fold-const.c (fold_range_test): Do not try to fold the range
	test if the rhs or lhs has side effects.

	Fri Sep 17 15:05:27 1999  Gavin Romig-Koch  <gavin@cygnus.com>
	* fold-const.c (operand_equal_p): Pay attention to side effects.

	* reg-stack.c (stack_result): Aggregates are not returned in
	stack registers.

Mon Oct 18 01:41:35 1999  Jeffrey A Law  (law@cygnus.com)

	* combine.c (get_last_value): If the last set of a register
	is after subst_low_cuid, then we can not use it to determine
	the register's last value.

Sat Oct 16 15:20:15 1999  Jeffrey A Law  (law@cygnus.com)

	Sat Oct 16 00:07:01 1999  Richard Henderson  <rth@cygnus.com>
	* gcse.c (hash_expr_1): Add in MEM_ALIAS_SET.
	(expr_equiv_p): Reject memories with different alias sets.

Wed Oct 13 01:46:14 1999  Jeffrey A Law  (law@cygnus.com)

	Wed Oct 13 01:44:29 1999  Carol LePage  <carolo@hal.com>
	* configure.in (sparc-hal-solaris2*): Fix xm_file, xm_defines,
	float_format and thread_file definitions.