@@ -4,8 +4,6 @@
    Copyright (C) 1999 Free Software Foundation, Inc.
 */
 
-#ifndef GAS_DOES_NOT_SUPPORT_MINUS_S
-#define GAS_DOES_NOT_SUPPORT_MINUS_S 1
+#ifndef GAS_REJECTS_MINUS_S
+#define GAS_REJECTS_MINUS_S 1
 #endif
-
-#include "i386/sol2.h"
