@@ -1399,11 +1399,10 @@ changequote(,)dnl
 changequote([,])dnl
 		xm_file="xm-siglist.h xm-alloca.h ${xm_file}"
 		xm_defines="USG POSIX SMALL_ARG_MAX"
+		tm_file=i386/sol2.h
 		if test x$gas = xyes; then
 			# Only needed if gas does not support -s
-			tm_file=i386/sol2gas.h
-		else
-			tm_file=i386/sol2.h
+			tm_file="i386/sol2gas.h ${tm_file}"
 		fi
 		tmake_file=i386/t-sol2
 		extra_parts="crt1.o crti.o crtn.o gcrt1.o gmon.o crtbegin.o crtend.o"
